fixed mat-tab overflow issue 2

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { 
+    height: 100%; 
+}
 
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif; 
+}
+
+
+//Angular-generated classes changed to avoid scroll that appears in the drawer
 
 .mat-tab-body-wrapper {
     height: 100%;
-  }
+    width: 100%;
+}
 
 .mat-tab-group {
-height: 100%;
+    height: 100%;
+    width: 100%;
 }
